[gd_scene load_steps=4 format=3 uid="uid://dap57sra3pvjs"]

[ext_resource type="Script" uid="uid://dtbqimkp0gov1" path="res://scripts/ui/pause_menu_layer.gd" id="1_4kxpj"]
[ext_resource type="Theme" uid="uid://gu54ssij03su" path="res://resources/theme/main_theme.tres" id="1_xin3r"]
[ext_resource type="Texture2D" uid="uid://c1nrclascqod3" path="res://assets/graphics/hud/volume_icon.png" id="2_4kxpj"]

[node name="PauseMenuLayer" type="CanvasLayer"]
layer = 127
script = ExtResource("1_4kxpj")

[node name="PauseMenu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xin3r")
color = Color(0, 0, 0, 0.67451)

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -43.0
offset_right = 65.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalSeparation" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -2
alignment = 1

[node name="GapTop" type="Label" parent="PauseMenu/Panel/VerticalSeparation"]
layout_mode = 2

[node name="Header" type="Label" parent="PauseMenu/Panel/VerticalSeparation"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "PAUSED"

[node name="GapBottom" type="Label" parent="PauseMenu/Panel/VerticalSeparation"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PauseMenu/Panel/VerticalSeparation"]
layout_mode = 2

[node name="HorizontalSeparation" type="HBoxContainer" parent="PauseMenu/Panel/VerticalSeparation"]
layout_mode = 2
alignment = 1

[node name="ButtonsForRun" type="VBoxContainer" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Spacing" type="Control" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Return" type="Button" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun"]
layout_mode = 2
text = "RETURN"

[node name="MainMenu" type="Button" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun"]
layout_mode = 2
text = "MAIN MENU"

[node name="Exit" type="Button" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun"]
layout_mode = 2
text = "EXIT GAME"

[node name="Spacing2" type="Control" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ButtonsForMainMenu" type="VBoxContainer" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Spacing" type="Control" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="Return" type="Button" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu"]
layout_mode = 2
text = "RETURN
"

[node name="Exit" type="Button" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu"]
layout_mode = 2
text = "EXIT GAME
"

[node name="Spacing2" type="Control" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation"]
layout_mode = 2
alignment = 1

[node name="FullscreenGroup" type="HBoxContainer" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options"]
layout_mode = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options/FullscreenGroup"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options/FullscreenGroup"]
layout_mode = 2
text = "Fullscreen"

[node name="Gap" type="Label" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options"]
layout_mode = 2
text = "
"

[node name="VolumeGroup" type="HBoxContainer" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options"]
layout_mode = 2

[node name="VolumeIcon" type="TextureRect" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options/VolumeGroup"]
layout_mode = 2
texture = ExtResource("2_4kxpj")
stretch_mode = 2

[node name="VolumeSlider" type="HSlider" parent="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options/VolumeGroup"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
value = 80.0

[connection signal="button_up" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun/Return" to="." method="_on_return_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun/MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForRun/Exit" to="." method="_on_exit_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu/Return" to="." method="_on_return_button_up"]
[connection signal="button_up" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/ButtonsForMainMenu/Exit" to="." method="_on_exit_button_up"]
[connection signal="toggled" from="PauseMenu/Panel/VerticalSeparation/HorizontalSeparation/Options/FullscreenGroup/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
